--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -1,32 +1,61 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="default">
+
 <head>
-<meta charset="utf-8">
-<title>Create Clothing</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - Closet Pocket</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-	<div layout:fragment="content">
-		<h1>Create Clothing Item</h1>
-		<form action="/save">
-			<div>
-				<label for="text">Type</label>
-				<input type="text" name="type" />
-			</div>
-			<div>
-				<label for="text">Color</label>
-				<input type="text" name="color" />
-			</div>
-			<div>
-				<label for="text">Brand</label>
-				<input type="text" name="brand" />
-			</div>
-			<div>
-				<label for="text">Info</label>
-				<input type="text" name="info" />
-			</div>
-			<button type="submit">Create</button>
-		</form>
-	</div>
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
+        <div class="container"><a class="navbar-brand logo" href="/" id="pocket-closet-logo">Pocket Closet</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/" id="navbar-home-button">HOME</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/create" id="navbar-create-button">CREATE</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/clothing" id="navbar-view-button">VIEW</a></li>
+                </ul>
+        </div>
+        </div>
+    </nav>
+
+    <main class="page contact-us-page">
+        <section class="clean-block clean-form dark">
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info">Create An Entry</h2>
+                </div>
+                <form action="/save">
+                    <div class="form-group"><label>Type</label><input class="form-control" type="text" placeholder="Cardigan, boots, slacks, etc." name="type"></div>
+                    <div class="form-group"><label>Color</label><input class="form-control" type="text" placeholder="Army green, beige, mustard yellow, etc." name="color"></div>
+                    <div class="form-group"><label>Brand</label><input class="form-control" type="text" placeholder="RVCA, Burberry, Vans, etc." name="brand"></div>
+                    <div class="form-group"><label>Info</label><input class="form-control" type="text" placeholder="Long sleeve, leather, distressed, etc." name="info"></div>
+                    <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Create</button></div>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <div class="footer-basic">
+        <footer>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="/" id="footer-home-button">Home</a></li>
+                <li class="list-inline-item"><a href="/create" id="footer-create-button">Create</a></li>
+                <li class="list-inline-item"><a href="/clothing" id="footer-view-button">View</a></li>
+                <li class="list-inline-item"><a href="https://github.com/rainerpons/pocket-closet" target="_blank" id="footer-source-button">Source</a></li>
+            </ul>
+            <p class="copyright">Pocket Closet © 2018</p>
+        </footer>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 </html>
