--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,97 +1,114 @@
-.footer-basic {
-  padding:40px 0;
-  background-color:#ffffff;
-  color:#4b4c4d;
+.clean-block .block-heading h1, .clean-block .block-heading h2, .clean-block .block-heading h3 {
+  margin-bottom:1.2rem;
+  color:#553f7f;
 }
 
-.footer-basic ul {
-  padding:0;
-  list-style:none;
-  text-align:center;
-  font-size:18px;
-  line-height:1.6;
-  margin-bottom:0;
+.clean-block .block-heading h1, .clean-block .block-heading h2, .clean-block .block-heading h3 {
+  margin-bottom:1.2rem;
 }
 
-.footer-basic li {
-  padding:0 10px;
+.clean-block.clean-form form {
+  border-top:2px solid #553f7f;
+  background-color:#fff;
+  max-width:500px;
+  margin:auto;
+  padding:40px;
+  box-shadow:0 2px 10px rgba(0,0,0,.075);
 }
 
-.footer-basic ul a {
-  color:inherit;
-  text-decoration:none;
-  opacity:0.8;
+.dropdown, .dropleft, .dropright, .dropup {
+  position:relative;
+  padding-right:16px;
 }
 
-.footer-basic ul a:hover {
-  opacity:1;
+.clean-block.dark {
+  background-color:#f6f6f6;
+  padding-bottom:80px;
 }
 
-.footer-basic .social {
-  text-align:center;
-  padding-bottom:25px;
+.clean-block .block-content, .clean-block .content {
+  box-shadow:0 2px 10px rgba(0,0,0,.075);
+  background-color:#fff;
+  border-top:2px solid #553f7f;
 }
 
-.footer-basic .social > a {
-  font-size:24px;
-  width:40px;
-  height:40px;
-  line-height:40px;
-  display:inline-block;
-  text-align:center;
-  border-radius:50%;
-  border:1px solid #ccc;
-  margin:0 8px;
-  color:inherit;
-  opacity:0.75;
+.table-responsive {
+  display:block;
+  width:100%;
+  overflow-x:auto;
+  -webkit-overflow-scrolling:touch;
+  -ms-overflow-style:-ms-autohiding-scrollbar;
+  box-shadow:0 2px 10px rgba(0,0,0,.075);
+  background-color:#fff;
+  border-top:2px solid #553f7f;
+  padding:40px;
 }
 
-.footer-basic .social > a:hover {
-  opacity:0.9;
+.clean-navbar .navbar-nav .nav-item {
+  padding-right:16px;
 }
 
-.footer-basic .copyright {
-  margin-top:15px;
-  text-align:center;
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
+  color:#fff;
+  background-color:#0062cc;
+  border-color:#005cbf;
+}
+
+#create-star-btn {
+  background-color:rgb(85,63,127);
+  border-color:rgba(255,255,255,0);
+}
+
+.navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
   font-size:13px;
-  color:#aaa;
-  margin-bottom:0;
 }
 
-#pocket-closet-logo {
-  font-size:28px;
+@media (min-width:992px) {
+  .navbar-expand-lg .navbar-nav .dropdown-menu {
+    position:absolute;
+    font-size:15px;
+  }
 }
 
-#footer-home-button, #footer-create-button, #footer-view-button, #footer-source-button {
-  color:rgb(255, 255, 255);
-}
-
-#navbar-home-button, #navbar-create-button, #navbar-view-button, #footer-home-button, #footer-create-button, #footer-view-button, #footer-source-button {
-  font-size:14px;
-}
-
-#welcome-block {
-  background-image:url("../img/clothes.jpg");
-  color:rgba(9, 162, 255, 0.85);
-}
-
-.clean-block.clean-hero .text {
-  padding-right:10%;
-  padding-left:10%;
+.clean-block.clean-hero {
+  position:relative;
+  text-align:center;
+  background-image:url("../img/clothes/clothes-1.jpg");
+  color:rgba(85,63,127,0.85);
+  background-size:cover;
+  background-repeat:no-repeat;
+  display:-ms-flexbox;
+  display:flex;
+  -ms-flex-align:center;
+  align-items:center;
+  -ms-flex-pack:center;
+  justify-content:center;
+  padding-bottom:0;
 }
 
 .clean-block.clean-hero h2 {
-  font-size:36px;
+  margin-bottom:30px;
+  padding-right:9%;
+  padding-left:9%;
+  font-size:38px;
 }
 
-.footer-basic {
-  background-color:rgb(43,47,49);
+.clean-block.clean-hero p {
+  font-size:18px;
+  margin-bottom:30px;
+  padding-right:9%;
+  padding-left:9%;
 }
 
-.btn:not(:disabled):not(.disabled) {
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+  color:rgba(0,0,0,.7);
+  font-size:13px;
 }
 
-.clean-block .block-content {
-  border-top:2px solid #5ea4f3;
+.navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
+  color:rgba(0,0,0,.525);
+}
+
+#get-clothing-table {
 }
 
