--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,9 @@
         <section class="clean-block clean-hero">
             <div class="text">
                 <h2>Welcome to Pocket Closet!</h2>
-                <p>RESTful API that chooses for you what to wear (so that you don't have to)!</p><button class="btn btn-outline-light" type="button">Learn More</button></div>
+                <p>RESTful API that chooses for you what to wear (so that you don't have to)!</p>
+                <a class="btn btn-outline-light" role="button" href="clothing/create">Learn More</a>
+            </div>
         </section>
     </main>
     <div class="footer-basic">
