--- a/src/main/resources/templates/clothing/create.html
+++ b/src/main/resources/templates/clothing/create.html
@@ -23,6 +23,9 @@
                     <li class="dropdown"><a class="dropdown-toggle nav-link text-capitalize dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Clothing&nbsp;</a>
                         <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation">Create</a><a class="dropdown-item" role="presentation" href="view">View</a></div>
                     </li>
+                    <li class="dropdown show"><a class="dropdown-toggle nav-link text-capitalize dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Outfits&nbsp;</a>
+                        <div class="dropdown-menu show" role="menu"><a class="dropdown-item" role="presentation" href="../outfits/view">View</a></div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -59,7 +62,7 @@
     <script src="../js/jquery.min.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
     <script src="../js/theme.js"></script>
-    <script src="../js/postrequest.js"></script>
+    <script src="../js/clothing-create.js"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 </body>
