--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,9 @@
                     <li class="dropdown"><a class="dropdown-toggle nav-link text-capitalize dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Clothing&nbsp;</a>
                         <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="clothing/create">Create</a><a class="dropdown-item" role="presentation" href="clothing/view">View</a></div>
                     </li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link text-capitalize dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Outfits&nbsp;</a>
+                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="outfits/view">View</a></div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -31,9 +34,7 @@
         <section class="clean-block clean-hero">
             <div class="text">
                 <h2>Welcome to Pocket Closet!</h2>
-                <p>RESTful API that chooses for you what to wear (so that you don't have to)!</p>
-                <a class="btn btn-outline-light" role="button" href="clothing/create">Learn More</a>
-            </div>
+                <p>RESTful API that chooses for you what to wear (so that you don't have to)!</p><a class="btn btn-outline-light" role="button" href="clothing/create">Let's Start</a></div>
         </section>
     </main>
     <div class="footer-basic">
