Fix incorrect link
Fixed an issue where a link in the View page pointed to the wrong
directory

--- a/src/main/resources/templates/clothing/view.html
+++ b/src/main/resources/templates/clothing/view.html
@@ -24,7 +24,7 @@
                         <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="create">Create</a><a class="dropdown-item" role="presentation">View</a></div>
                     </li>
                     <li class="dropdown"><a class="dropdown-toggle nav-link text-capitalize dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Outfits&nbsp;</a>
-                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="outfits/view">View</a></div>
+                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="../outfits/view">View</a></div>
                     </li>
                 </ul>
             </div>
